# mcp-compact

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  config.example.json  pyproject.toml
.agents/skills/mcpx-documentation/: SKILL.md
.agents/skills/mcpx-getting-started/: SKILL.md
.agents/skills/mcpx-release/: SKILL.md
.github/workflows/: release.yml
docs/: roadmap.md
docs/plans/: 2026-02-27-gui-routing-defensive-enhancement.md
scripts/: regression-test.sh
src/mcp_compact/: __init__.py  __main__.py  catalog.py  config.py  projection.py  runtime.py  upstreams.py
src/mcpx/: __init__.py  __main__.py  catalog.py  compiler.py  config.py  description.py  desktop_app.py  execution.py  native.py  resolver.py  runtime.py  snapshot.py  surfaces.py  upstreams.py
src/mcpx/web/: __init__.py  api.py
tests/: test_compression.py  test_health.py  test_mcp_compact.py  test_mcpx.py  test_mcpx_v2.py
